kubernetes/main/apps/self-hosted/wallabag/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
      - name: wallabag
        image: wallabag/wallabag:2.6.12
        ports:
          - containerPort: 80
            name: http
        resources:
          requests:
            cpu: 12m
            memory: 64M
          limits:
            memory: 256M
